Correctly fix horizontal scrolling issue

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,7 +9,6 @@
 
 body {
   background-color: #efefef;
-  overflow-x: hidden;
 }
 
 .card {
